<resources>
    <string name="app_name">ExerciseApp</string>
    <string name="start_image">start image</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="ready_time">10</string>
    <string name="exercise_name_title">Exercise Name</string>
    <string name="end">END</string>
    <string name="success_exercise_title">You have finished the exercise!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?
    </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="weight_hint">Weight (in kg)</string>
    <string name="height_hint">Height (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="please_enter_valid_values">Please enter valid values.</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="underweight_description">Oops! You really need to take better care of yourself! Eat
        more!
    </string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="normal_description">Congratulations! You are in a good shape!</string>
    <string name="overweight">Overweight</string>
    <string name="overweight_description">Oops! You really need to take care of yourself! Workout.</string>
    <string name="obese_moderately">Obese Class | (Moderately obese)</string>
    <string name="obese_severely">Obese Class | (Severely obese)</string>
    <string name="obese_very_severely">Obese Class | (Very Severely obese)</string>
    <string name="obese_severely_description">OMG! You are in a very dangerous condition! Act now!</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="history_title">History</string>
    <string name="date_tools_text">Date</string>
    <string name="exercise_completed">Exercise Completed</string>
    <string name="no_data_available">No data available.</string>
</resources>