<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".features.SuccessActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_success_activity"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/white"
    />

    <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/end"
            android:textColor="@color/colorAccent"
            android:textSize="35sp"
    />

    <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/item_circular_color_accent_border"
            android:layout_gravity="center"
    >

        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/start_image"
                android:src="@drawable/ic_done"
        />
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/congratulations"
            android:textColor="@color/gray_black"
            android:textSize="25sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_exercise_title"
            android:textColor="@color/gray_black"
            android:textSize="18sp"
    />

    <Button
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:text="@string/finish"
    />

</LinearLayout>